// MIMIC-IV v2.2 (subset) — DBML for dbdiagram.io
// Includes: patients, omr, provider, admissions, d_hcpcs, hcpcsevents,
// d_icd_diagnoses, diagnoses_icd, d_icd_procedures, procedures_icd,
// d_labitems, labevents, microbiologyevents, drgcodes,
// poe, poe_detail, pharmacy, prescriptions, emar, emar_detail, services, transfers

// --------------------------------------------------
// 14. patients
// --------------------------------------------------
Table patients {
  subject_id integer [pk, not null]
  gender varchar(1) [not null]
  anchor_age integer [not null]
  anchor_year integer [not null]
  anchor_year_group varchar(255) [not null]
  dod timestamp
}

// --------------------------------------------------
// 00. omr
// --------------------------------------------------
Table omr {
  subject_id integer [not null]
  chartdate date [not null]
  seq_num integer [not null]
  result_name varchar(100) [not null]
  result_value text [not null]

  indexes {
    (subject_id, chartdate, seq_num) [pk]
  }
}

// --------------------------------------------------
// 01. provider
// --------------------------------------------------
Table provider {
  provider_id varchar(10) [pk, not null, note: "Pattern like P003AB, P00102. Random deidentified identifier."]
}

// --------------------------------------------------
// 02. admissions
// --------------------------------------------------
Table admissions {
  subject_id integer [not null]
  hadm_id integer [pk, not null]

  admittime timestamp [not null]
  dischtime timestamp
  deathtime timestamp

  admission_type varchar(40) [not null]
  admit_provider_id varchar(10)

  admission_location varchar(60)
  discharge_location varchar(60)
  insurance varchar(255)
  language varchar(10)
  marital_status varchar(30)
  race varchar(80)

  edregtime timestamp
  edouttime timestamp

  hospital_expire_flag smallint
}

// --------------------------------------------------
// 03. d_hcpcs
// --------------------------------------------------
Table d_hcpcs {
  code char(5) [pk, not null]
  category smallint
  long_description text
  short_description varchar(180)
}

// --------------------------------------------------
// 11. hcpcsevents  (typo in your text: hpcsevents -> hcpcsevents)
// --------------------------------------------------
Table hcpcsevents {
  subject_id integer [not null]
  hadm_id integer [not null]
  chartdate date
  hcpcs_cd char(5) [not null]
  seq_num integer [not null]
  short_description varchar(180)

  indexes {
    (hadm_id, seq_num) [pk]
  }
}

// --------------------------------------------------
// 04. d_icd_diagnoses
// --------------------------------------------------
Table d_icd_diagnoses {
  icd_code char(7) [not null]
  icd_version integer [not null]
  long_title varchar(255)

  indexes {
    (icd_code, icd_version) [pk]
  }
}

// --------------------------------------------------
// 07. diagnoses_icd
// --------------------------------------------------
Table diagnoses_icd {
  subject_id integer [not null]
  hadm_id integer [not null]
  seq_num integer [not null]
  icd_code varchar(7)
  icd_version integer

  indexes {
    (hadm_id, seq_num) [pk]
  }
}

// --------------------------------------------------
// 05. d_icd_procedures
// --------------------------------------------------
Table d_icd_procedures {
  icd_code char(7) [not null]
  icd_version integer [not null]
  long_title varchar(255)

  indexes {
    (icd_code, icd_version) [pk]
  }
}

// --------------------------------------------------
// 19. procedures_icd
// --------------------------------------------------
Table procedures_icd {
  subject_id integer [not null]
  hadm_id integer [not null]
  seq_num integer [not null]
  chartdate date [not null]
  icd_code varchar(7)
  icd_version integer

  indexes {
    (hadm_id, seq_num) [pk]
  }
}

// --------------------------------------------------
// 06. d_labitems
// --------------------------------------------------
Table d_labitems {
  itemid integer [pk]
  label varchar(50)
  fluid varchar(50)
  category varchar(50)
}

// --------------------------------------------------
// 12. labevents
// --------------------------------------------------
Table labevents {
  labevent_id integer [pk, not null]
  subject_id integer [not null]
  hadm_id integer
  specimen_id integer [not null]
  itemid integer [not null]
  order_provider_id varchar(10)

  charttime timestamp
  storetime timestamp

  value varchar(200)
  valuenum double
  valueuom varchar(20)
  ref_range_lower double
  ref_range_upper double
  flag varchar(10)
  priority varchar(7)
  comments text
}

// --------------------------------------------------
// 13. microbiologyevents
// --------------------------------------------------
Table microbiologyevents {
  microevent_id integer [pk, not null]
  subject_id integer [not null]
  hadm_id integer
  micro_specimen_id integer [not null]
  order_provider_id varchar(10)

  chartdate timestamp [not null]
  charttime timestamp

  spec_itemid integer [not null]
  spec_type_desc varchar(100) [not null]
  test_seq integer [not null]

  storedate timestamp
  storetime timestamp

  test_itemid integer
  test_name varchar(100)

  org_itemid integer
  org_name varchar(100)
  isolate_num smallint
  quantity varchar(50)

  ab_itemid integer
  ab_name varchar(30)
  dilution_text varchar(10)
  dilution_comparison varchar(20)
  dilution_value double
  interpretation varchar(5)

  comments text
}

// --------------------------------------------------
// 08. drgcodes
// --------------------------------------------------
Table drgcodes {
  subject_id integer
  hadm_id integer
  drg_type varchar(4)
  drg_code varchar(10)
  description varchar(195)
  drg_severity smallint
  drg_mortality smallint

  // No PK described; keep as-is. If you want: (hadm_id, drg_type, drg_code)
}

// --------------------------------------------------
// 16. poe
// --------------------------------------------------
Table poe {
  poe_id varchar(25) [pk, not null]
  poe_seq integer [not null]

  subject_id integer [not null]
  hadm_id integer

  ordertime timestamp [not null]
  order_type varchar(25) [not null]
  order_subtype varchar(50)
  transaction_type varchar(15)

  discontinue_of_poe_id varchar(25)
  discontinued_by_poe_id varchar(25)

  order_provider_id varchar(10)
  order_status varchar(15)
}

// --------------------------------------------------
// 17. poe_detail
// --------------------------------------------------
Table poe_detail {
  poe_id varchar(25) [not null]
  poe_seq integer [not null]
  subject_id integer [not null]

  field_name varchar(255) [not null]
  field_value text

  indexes {
    (poe_id, field_name) [pk]
  }
}

// --------------------------------------------------
// 15. pharmacy
// --------------------------------------------------
Table pharmacy {
  subject_id integer [not null]
  hadm_id integer [not null]
  pharmacy_id integer [pk, not null]

  poe_id varchar(25)

  starttime timestamp
  stoptime timestamp

  medication text
  proc_type varchar(50) [not null]
  status varchar(50)

  entertime timestamp [not null]
  verifiedtime timestamp

  route varchar(50)
  frequency varchar(50)
  disp_sched varchar(255)
  infusion_type varchar(15)
  sliding_scale varchar(1)
  lockout_interval varchar(50)

  basal_rate real
  one_hr_max varchar(10)
  doses_per_24_hrs real

  duration real
  duration_interval varchar(50)

  expiration_value integer
  expiration_unit varchar(50)
  expirationdate timestamp

  dispensation varchar(50)
  fill_quantity varchar(50)
}

// --------------------------------------------------
// 18. prescriptions
// --------------------------------------------------
Table prescriptions {
  subject_id integer [not null]
  hadm_id integer [not null]
  pharmacy_id integer [not null]

  poe_id varchar(25)
  poe_seq integer

  order_provider_id varchar(10)

  starttime timestamp
  stoptime timestamp

  drug_type varchar(20) [not null]
  drug varchar(255) [not null]

  formulary_drug_cd varchar(50)
  gsn varchar(255)
  ndc varchar(25)

  prod_strength varchar(255)
  form_rx varchar(25)

  dose_val_rx varchar(100)
  dose_unit_rx varchar(50)
  form_val_disp varchar(50)
  form_unit_disp varchar(50)

  doses_per_24_hrs real
  route varchar(50)

  indexes {
    (pharmacy_id, drug_type) [pk]
  }
}

// --------------------------------------------------
// 09. emar
// --------------------------------------------------
Table emar {
  subject_id integer [not null]
  hadm_id integer

  emar_id varchar(25) [pk, not null]
  emar_seq integer [not null]

  poe_id varchar(25) [not null]
  pharmacy_id integer
  enter_provider_id varchar(10)

  charttime timestamp [not null]
  medication text
  event_txt varchar(100)
  scheduletime timestamp
  storetime timestamp [not null]
}

// --------------------------------------------------
// 10. emar_detail
// --------------------------------------------------
Table emar_detail {
  subject_id integer [not null]
  emar_id varchar(25) [not null]
  emar_seq integer [not null]

  parent_field_ordinal varchar(10)
  administration_type varchar(50)
  pharmacy_id integer

  barcode_type varchar(4)
  reason_for_no_barcode text
  complete_dose_not_given varchar(5)

  dose_due varchar(100)
  dose_due_unit varchar(50)
  dose_given varchar(255)
  dose_given_unit varchar(50)

  will_remainder_of_dose_be_given varchar(5)

  product_amount_given varchar(30)
  product_unit varchar(30)
  product_code varchar(30)
  product_description varchar(255)
  product_description_other varchar(255)

  prior_infusion_rate varchar(40)
  infusion_rate varchar(40)
  infusion_rate_adjustment varchar(50)
  infusion_rate_adjustment_amount varchar(30)
  infusion_rate_unit varchar(30)

  route varchar(10)
  infusion_complete varchar(1)
  completion_interval varchar(50)
  new_iv_bag_hung varchar(1)
  continued_infusion_in_other_location varchar(1)

  restart_interval text
  side varchar(10)
  site varchar(255)
  non_formulary_visual_verification varchar(1)

  indexes {
    (emar_id, emar_seq, parent_field_ordinal) [pk]
  }
}

// --------------------------------------------------
// 20. services
// --------------------------------------------------
Table services {
  subject_id integer
  hadm_id integer
  transfertime timestamp
  prev_service varchar(20)
  curr_service varchar(20)

  indexes {
    (hadm_id, transfertime, curr_service) [pk]
  }
}

// --------------------------------------------------
// 21. transfers
// --------------------------------------------------
Table transfers {
  subject_id integer [not null]
  hadm_id integer
  transfer_id integer [pk, not null]

  eventtype varchar(10)
  careunit varchar(255)

  intime timestamp
  outtime timestamp
}

// -------------------------------
// Study: one patient, many studies
// -------------------------------
Table studies {
  study_id integer [pk, not null]
  subject_id integer [not null]

}

// -------------------------------
// Image: one study, many images
// -------------------------------
Table images {
  image_id integer [pk, not null]
  study_id integer [not null]

  file_path text

}

// ----------------------------------------
// Acquisition: one row per image (1:1)
// ----------------------------------------
Table image_acquisition {
  image_id integer [pk, not null]

  // key analyzed factors
  view_code varchar(16) [note: "e.g., PA/AP/LAT"]
  kvp real
  detector_type_code varchar(32) [note: "e.g., DIRECT/SCINTILLATOR/CR"]

  // resolution-related
  rows integer
  cols integer
  pixel_spacing_row real [note: "mm/pixel"]
  pixel_spacing_col real [note: "mm/pixel"]

  // Optional additional acquisition fields
  exposure_mas real
  exposure_time_ms real
  body_part text
  manufacturer text
  model_name text
}

Table chexpert_diagnosisi {
study_id  integer [pk, not null]
atelectasis integer
cardiomegaly integer
consolidation integer
edema integer
enlarged_cardiomediastinum integer
fracture integer
lung_lesion integer
lung_opacity integer
no_finding integer
pleural_effusion integer
pleural_other integer
pneumonia integer
pneumothorax integer
support_devices integer
}


// --------------------------------------------------
// Relationships (Refs)
// --------------------------------------------------
Ref: omr.subject_id > patients.subject_id

Ref: admissions.subject_id > patients.subject_id
Ref: admissions.admit_provider_id > provider.provider_id

Ref: hcpcsevents.subject_id > patients.subject_id
Ref: hcpcsevents.hadm_id > admissions.hadm_id
Ref: hcpcsevents.hcpcs_cd > d_hcpcs.code

Ref: diagnoses_icd.subject_id > patients.subject_id
Ref: diagnoses_icd.hadm_id > admissions.hadm_id
Ref: diagnoses_icd.(icd_code, icd_version) > d_icd_diagnoses.(icd_code, icd_version)

Ref: procedures_icd.subject_id > patients.subject_id
Ref: procedures_icd.hadm_id > admissions.hadm_id
Ref: procedures_icd.(icd_code, icd_version) > d_icd_procedures.(icd_code, icd_version)

Ref: labevents.subject_id > patients.subject_id
Ref: labevents.hadm_id > admissions.hadm_id
Ref: labevents.itemid > d_labitems.itemid
Ref: labevents.order_provider_id > provider.provider_id

Ref: microbiologyevents.subject_id > patients.subject_id
Ref: microbiologyevents.hadm_id > admissions.hadm_id
Ref: microbiologyevents.order_provider_id > provider.provider_id

Ref: drgcodes.subject_id > patients.subject_id
Ref: drgcodes.hadm_id > admissions.hadm_id

Ref: poe.subject_id > patients.subject_id
Ref: poe.hadm_id > admissions.hadm_id
Ref: poe.order_provider_id > provider.provider_id
Ref: poe.discontinue_of_poe_id > poe.poe_id
Ref: poe.discontinued_by_poe_id > poe.poe_id

Ref: poe_detail.poe_id > poe.poe_id
Ref: pharmacy.poe_id > poe.poe_id

Ref: pharmacy.subject_id > patients.subject_id
Ref: pharmacy.hadm_id > admissions.hadm_id

Ref: prescriptions.subject_id > patients.subject_id
Ref: prescriptions.hadm_id > admissions.hadm_id
Ref: prescriptions.pharmacy_id > pharmacy.pharmacy_id
Ref: prescriptions.poe_id > poe.poe_id
Ref: prescriptions.order_provider_id > provider.provider_id

Ref: emar.subject_id > patients.subject_id
Ref: emar.hadm_id > admissions.hadm_id
Ref: emar.poe_id > poe.poe_id
Ref: emar.pharmacy_id > pharmacy.pharmacy_id
Ref: emar.enter_provider_id > provider.provider_id

Ref: emar_detail.subject_id > patients.subject_id
Ref: emar_detail.emar_id > emar.emar_id
Ref: emar_detail.pharmacy_id > pharmacy.pharmacy_id

Ref: services.subject_id > patients.subject_id
Ref: services.hadm_id > admissions.hadm_id

Ref: transfers.subject_id > patients.subject_id
Ref: transfers.hadm_id > admissions.hadm_id

Ref: studies.subject_id > patients.subject_id
Ref: images.study_id > studies.study_id
Ref: image_acquisition.image_id > images.image_id

Ref: chexpert_diagnosisi.study_id > studies.study_id

